--- a/babel.config.json
+++ b/babel.config.json
@@ -1,10 +1,13 @@
 {
-    "presets": [
-      [
-          "babel-preset-expo",
-          {
-            "jsxRuntime": "automatic"
-          }
-      ]
+  "presets": [
+    [
+      "babel-preset-expo",
+      {
+        "jsxRuntime": "automatic"
+      }
+    ],
+    [
+      "@babel/preset-flow"
     ]
-  }
+  ]
+}
