--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "alarmclock",
   "version": "0.0.1",
   "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
+    "build": "babel App.js -d ./dist",
+    "flow": "flow",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "jest": "^29.0.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
@@ -20,7 +25,10 @@
   "devDependencies": {
     "@babel/cli": "^7.12.17",
     "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.19.1"
+    "@babel/preset-flow": "^7.18.6",
+    "flow-bin": "^0.187.1"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
