--- a/package.json
+++ b/package.json
@@ -14,19 +14,26 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/slider": "4.2.3",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
-    "jest": "^29.0.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-web": "~0.18.7"
+    "react-native": "0.69.6",
+    "react-native-web": "~0.18.7",
+    "react-native-wheel-picker-expo": "^0.5.2",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.17",
     "@babel/core": "^7.12.9",
     "@babel/preset-flow": "^7.18.6",
-    "flow-bin": "^0.187.1"
+    "@types/jest": "^29.0.3",
+    "flow-bin": "^0.187.1",
+    "jest": "^29.0.3"
   },
   "jest": {
     "preset": "react-native"
